[tool.poetry]
name = "z-focus-projection"
version = "0.1.0"
description = "Z Focus Projection"
authors = ["Sara BARRASA RAMOS, Federico OBERNDORFER <sbarrasaramos@gmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/sbarrasaramos/z-focus-projection"
repository = "https://github.com/sbarrasaramos/z-focus-projection"
documentation = "https://z-focus-projection.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2"}
safety = "^1.9.0"
mypy = "^0.782"
xdoctest = "^0.13.0"
sphinx = "^3.2.0"
sphinx-autobuild = "^0.7.1"
pre-commit = "^2.6.0"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.2"
flake8-isort = "^4.0.0"
nbstripout = "^0.4.0"

[tool.poetry.scripts]
z-focus-projection = "z_focus_projection.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["z_focus_projection"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "google"
known_first_party = "funk_lines"
line_length = 100
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
